# workshops

./: .env.development  .gitignore  README.md  package-lock.json  package.json
Boostrap_WebApp_Development/: README.md  package-lock.json  package.json  tailwind.config.ts
Boostrap_WebApp_Development/src/config/: defaults.ts
Boostrap_WebApp_Development/src/module/: index.js
Boostrap_WebApp_Development/src/pages/: _app.tsx  index.tsx
Coreum-DEX/: README.md  next.config.ts  package-lock.json  package.json
Coreum-DEX/src/app/: globals.css  layout.tsx  metadata.tsx  page.tsx
Coreum-DEX/src/components/: BurnTicketModal.tsx  BurnTicketSuccessModal.tsx  BuyTicketModal.tsx  BuyTicketSuccessModal.tsx  Chart.tsx  ClientLayout.tsx  ClientModalWrapper.tsx  ConnectWalletModal.tsx  Countdown.tsx  Footer.tsx  HeroSection.tsx  Holders.tsx  InfoModal.tsx  Modal.tsx  OpenOrders.tsx  OrderHistory.tsx  ReviewDexTxModal.tsx  RewardsSection.tsx  StatsCards.tsx  TicketsTable.tsx  TokenBalance.tsx  TokenSelector.tsx  TradeSuccessModal.tsx  TradingPanel.tsx  TradingSection.tsx  UserStats.tsx  WalletItem.tsx
Coreum-DEX/src/config/: default.ts
Coreum-DEX/src/constants/: index.tsx
Coreum-DEX/src/hooks/: useAccount.ts  useBalances.ts  useCancelOrder.ts  useCreateOrder.ts  useDex.ts  useDraft.ts  useEstimateTxGasFee.ts  usePriceData.ts  useTicketHolders.ts
Coreum-DEX/src/lib/: genesis.ts  params.ts  query.ts
CoreumV4DynamicData/: ReadMe.md
CoreumV4DynamicData/Cosmwasm-FullStack/: .env.development  README.md  package-lock.json  package.json
CoreumV4DynamicData/FullStack-DynamicData/: README.md
CoreumV4DynamicData/NftDynamicContract/: dockerfile
CoreumV4_Extension_IBC_Hooks/: README.md
CoreumV4_Extension_IBC_Hooks/coinflip-fe-next/: next.config.js  next.config.mjs  package.json
CoreumV4_Extension_IBC_Hooks/ibchooks-secretVRF/consumer-side/: Cargo.toml  Makefile
CoreumV4_Extension_IBC_Hooks/ibchooks-secretVRF/consumer-side/schema/: coreum_secret_ibc_rng_consumer_side_proxy.json
CoreumV4_Extension_IBC_Hooks/ibchooks-secretVRF/consumer-side/schema/raw/: execute.json  query.json  response_to_get_all_jobs.json  response_to_get_job_by_id.json
CoreumV4_Extension_IBC_Hooks/ibchooks-secretVRF/consumer-side/src/: contract.rs  msg.rs  state.rs
CoreumV4_Extension_IBC_Hooks/ibchooks-secretVRF/ibc-hooks-contract/: .gitignore  Cargo.toml  Makefile
CoreumV4_Extension_IBC_Hooks/ibchooks-secretVRF/ibc-hooks-contract/node/: upload.js
CoreumV4_Extension_IBC_Hooks/ibchooks-secretVRF/ibc-hooks-contract/src/: contract.rs  msg.rs  state.rs
Coreum_v4Clawback/: README.md  package-lock.json  package.json  tailwind.config.js
Coreum_v4Clawback/create-tokenClawback/: go.mod  go.sum  main.go
Coreum_v4Clawback/src/: App.js  api.js  index.css
Cosmwasm-FullStack/: .gitmodules  README.md
Cosmwasm-FullStack/.next/: trace
FullStack-DynamicData/: README.md  package-lock.json  package.json  tailwind.config.js
FullStack-DynamicData/create-nft/: go.mod  main.go
FullStack-DynamicData/src/: App.js
IBC/: .gitignore  README.md  package-lock.json  package.json
NFTUpdateDynamicContract/: Cargo.toml  NOTICE
NFTUpdateDynamicContract/artifacts/: checksums.txt
NFTUpdateDynamicContract/src/: contract.rs  error.rs  msg.rs
OpenDaoWorkshop/: .env  .gitignore  package.json
OpenDaoWorkshop/components/: Nav.tsx  WalletLoader.tsx
OpenDaoWorkshop/coreum/: tx.ts
OpenDaoWorkshop/hooks/: client.tsx
OpenDaoWorkshop/ibc/: package.json
OpenDaoWorkshop/pages/: _app.tsx  index.tsx  propose.tsx  results.tsx  vote.tsx
OpenDaoWorkshop/services/: keplr.tsx
OpenDaoWorkshop/styles/: daisyui-themes.json
components/: Layout.tsx  Loader.tsx
contexts/: client.tsx
coreum/: query.ts
ibc/: README.md  package-lock.json  tailwind.config.ts  tsconfig.json
pages/: _document.tsx  propose.tsx  results.tsx  vote.tsx
src/config/: defaults.ts
src/pages/: _app.tsx  index.tsx
util/: conversion.tsx
(+337 files in other folders)
