[package]
name = "nft"
version = "0.1.0"
edition = "2021"
description = "A CosmWasm contract for asset management on the Coreum blockchain"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.13
"""

[dependencies]
coreum-wasm-sdk = "1.0.0" # Downgrade to a version compatible with prost 0.12.4
cosmwasm-schema = "1.1.2"
cw-ownable = "0.5.1"
cosmwasm-std = "1.1.2"
cosmwasm-storage = "1.1.2"
cw-storage-plus = "0.13.4"
cw2 = "0.13.2"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
bincode = "1.3.3"
prost = "=0.12.6"
prost-types = "=0.12.6"
base64 = "0.13.0"


[dev-dependencies]
cosmwasm-std = "1.0.0"
cw-multi-test = "0.16.0"
