[package]
name = "coreum_flip_the_coin"
version = "0.1.0"
authors = ["helwan"]
edition = "2021"
description = "IBC - RNG consumer side proxy for Coreum"
license = "MIT"

#fork of https://github.com/writersblockchain/ibchooks-secretVRF/blob/master/consumer-side/src/contract.rs
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
backtraces = ["cosmwasm-std/backtraces"]
with_floats = []
stargate = []
ibc3 = ["stargate"]

[dependencies]

cosmwasm-std = { version = "1.5.0", features = ["ibc3"] }
cw-storage-plus = "1.2.0"
cosmwasm-schema = "1.5.0"
anybuf = "0.3.0"
base64 = "0.21.7"
sha2 = "0.10.8"
byteorder = "1.4.3"
thiserror = "1.0.40"
cw2 = "1.0.1"


schemars = "0.8.16"
serde = { version = "1.0.193", default-features = false, features = ["derive"] }

hex = "0.4.3"
serde-json-wasm = "1.0.0"
coreum-wasm-sdk = "1.0.0"
