[package]
name = "ibc-hooks-contract"
version = "0.0.1"
authors = ["SCRT Labs <info@scrtlabs.com>"]
edition = "2021"
description = "A Test contract intended to use in integration tests for the Secret Netowrk"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
backtraces = ["cosmwasm-std/backtraces"]
with_floats = []

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.11", features = [
    "stargate",
    "ibc3",
] }
secret-toolkit-serialization = { version = "0.10.0", features = ["base64"] }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.11" }
secret-toolkit = { version = "0.10.0", default-features = false, features = ["utils", "storage", "serialization", "viewing-key", "permit"] }
secret-toolkit-crypto = { version = "0.10.0", features = ["hash", "rand", "ecc-secp256k1"] }
schemars = "0.8.1"
serde = { version = "1.0.114", default-features = false, features = [
    "derive",
    "alloc",
] }
serde-json-wasm = "1.0.0"
base64 = "0.21.0"
thiserror = { version = "1.0" }
